# vectorize

./: .dockerignore  .editorconfig  .env.example  .gitignore  .safety-project.ini  Dockerfile  LICENSE  README.md  README_EVALUATION.md  README_TRAINING.md  compose.yaml  docker-bake.hcl  mkdocs.yaml  pyproject.toml  pyrightconfig.json  sonar-project.properties
.github/workflows/: main.yaml  main.yml  publish.yaml  publish.yml  snyk.yaml
deploy/: compose.yaml
docs/: act.md  api-endpoints.plantuml  api.md  configuration.md  contributing.md  contributors.md  entity-relation.plantuml  grafana.md  index.md  installation.md  router-aimodel.puml  router-datasets.puml  router-inference.puml  router-synthesis.puml  router-tasks.puml  router-upload.puml  use-cases-datasets.plantuml  use-cases-embeddings.plantuml  use-cases-evaluation.plantuml  use-cases-generation.plantuml  use-cases-processes.plantuml  use-cases-training.plantuml  use-cases-uploads.plantuml
docs/api/: ai-models.md  common.md  datasets.md  evaluation.md  inference.md  models.md  synthesis.md  tasks.md  training.md  upload.md
docs/architecture/: api-endpoints.md  entity-relation.md  use-cases-datasets.md  use-cases-embeddings.md  use-cases-generation.md  use-cases-processes.md  use-cases-uploads.md
docs/diagrams/: api-endpoints.md  entity-relation.md  use-cases-datasets.md  use-cases-embeddings.md  use-cases-evaluation.md  use-cases-generation.md  use-cases-processes.md  use-cases-tasks.md  use-cases-training.md  use-cases-upload.md
docs/diagrams/src/: api-endpoints.plantuml  entity-relation.plantuml  use-cases-datasets.plantuml  use-cases-embeddings.plantuml  use-cases-evaluation.plantuml  use-cases-generation.plantuml  use-cases-processes.plantuml  use-cases-tasks.plantuml  use-cases-training.plantuml  use-cases-upload.plantuml  use-cases-uploads.plantuml
docs/user-guides/: datasets.md  evaluation.md  models.md  tasks.md  training.md  upload.md
resources/caddy/: Caddyfile  compose.yaml
resources/deploy/: .env.example  compose.yaml
resources/dramatiq/: compose.yaml
resources/grafana/: .env.example  compose.yaml
resources/grafana/config/: config.alloy  dashboard.json  loki-config.yaml  prometheus.yaml
resources/sonarqube/: compose.yaml
resources/web/: compose.yaml
scripts/: check_outdated.py  create_big_zip.py  embedding_benchmark_results.json  embedding_performance_test.py  locust.py  locust_health.py  locust_prod.py  sonar_scan.py
src/txt2vec/: __init__.py  __main__.py  app.py  error_handler.py  errors.py  handle_exceptions.py  server.py
src/txt2vec/ai_model/: __init__.py  exceptions.py  model_source.py  models.py  repository.py  router.py  service.py
src/txt2vec/common/: __init__.py  app_error.py  exceptions.py  models.py  status.py  task_status.py
src/txt2vec/config/: __init__.py  config.py  db.py  errors.py  logger.py  security.py  seed.py
src/txt2vec/datasets/: __init__.py  classification.py  column_mapper.py  constants.py  exceptions.py  file_format.py  file_loaders.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
src/txt2vec/embeddings/: models.py
src/txt2vec/github_upload/: router.py  schemas.py  service.py  utils.py
src/txt2vec/inference/: __init__.py  models.py  repository.py  request_model.py  router.py  service.py
src/txt2vec/routers/: dataset_read.py
src/txt2vec/services/: dataset_service.py  exceptions.py  models.py
src/txt2vec/synthesis/: __init__.py  models.py
src/txt2vec/upload/: __init__.py  background_service.py  exceptions.py  github_service.py  huggingface_service.py  local_service.py  model_service.py  model_source.py  models.py  repository.py  router.py  schemas.py  tasks.py  utils.py  zip_extractor.py  zip_service.py
src/txt2vec/utils/: __init__.py  error_handler.py  error_path.py  etag_parser.py  file_sanitizer.py  routers.py
src/txt2vec_service/: cli.py  main.py  model_service.py
src/txt2vec_service/routers/: dataset.py
src/vectorize/: __init__.py  __main__.py  app.py  server.py  tasks.py
src/vectorize/actions/: actions_model.py  repository.py  (+4 more)
test_data/datasets/: trainingdata.csv  trainingdata_invalid_format.csv  trainingdata_invalid_format.json  trainingdata_invalid_format.xml
testing_data/: trainingdata.json  trainingdata_wrong_format.csv  trainingsdata.xml
tests/: __init__.py  conftest.py  dataset_test.py  huggingface_test.py  local_upload_test.py  local_upload_test_mock.py  test_base.py  test_dataset.py  test_github_upload_utils.py  upload_test.py  utils.py  wait_for_task.py  zip_test.py
tests/actions/: test_invalid.py  test_valid.py
tests/ai_model/: test_delete_comprehensive.py  test_get_all_paged.py  test_get_all_paged_invalid.py  test_get_all_paged_valid.py  test_read.py  test_write.py
tests/dataset/: test_hf_upload.py  test_read.py  test_upload_invalid.py  test_upload_valid.py  test_write.py
tests/datasets/: test_dataset_invalid.py  test_dataset_valid.py  test_get_datasets.py  test_upload_invalid.py  test_upload_valid.py  test_write.py  utils.py
tests/evaluation/: test_eval_invalid.py  test_eval_valid.py  test_evaluation.py  test_evaluation_comprehensive.py  test_service_integration.py  test_training_evaluation_edge_cases.py  test_training_evaluation_integration.py
tests/github/: test__github_upload_invalid.py  test_github_upload_invalid.py  test_github_upload_valid.py  test_github_utils.py  test_upload_invalid.py  test_upload_valid.py
tests/huggingface/: test_upload_duplicate.py  test_upload_invalid.py  test_upload_valid.py
tests/inference/: __init__.py  test_counter.py  test_inference.py  test_model_loading_common.py  test_model_loading_invalid.py  test_model_loading_valid.py
tests/local/: test_local_upload.py
tests/synthesis/: synthesis_test.py
tests/task/: test_invalid.py  test_valid.py
tests/training/: test_failed_status.py  test_training_cancel.py  test_training_comprehensive.py  test_training_invalid.py  test_training_valid.py
tests/upload/: test_github_backgroundtask.py  test_github_endpoint.py  test_github_modelupload.py  test_uploadstatus.py  tests_uploadstatus.py
(+210 files in other folders)
