[project]
name = "txt2vec"
version = "2025.4.1"
description = "AWP Projekt für Text Embedding Service"
authors = [
    { name = "ManuelDausmann" },
    { name = "Yannjc" },
    { name = "Dosto1ewski" },
    { name = "BtnCbn" },
    { name = "Yukasama", email = "yukasamaa@gmail.com" },
]
maintainers = [
    { name = "ManuelDausmann" },
    { name = "Yannjc" },
    { name = "Dosto1ewski" },
    { name = "BtnCbn" },
    { name = "Yukasama", email = "yukasamaa@gmail.com" },
]
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.13"
keywords = [
    "AI",
    "AI Training",
    "AI Inference",
    "Synthetic Data Generation",
    "AI Model Hosting",
    "AI Evaluation",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Framework :: Pytest",
    "Framework :: MkDocs",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.10.6",
    "pandas>=2.2.3",
    "numpy>=2.2.4",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "loguru>=0.7.3",
    "hypercorn>=0.17.3",
    "aiofiles>=24.1.0",
    "lxml>=5.3.2",
    "sqlmodel>=0.0.24",
    "aiosqlite>=0.21.0",
    "hf-xet>=1.0.3",
    "huggingface-hub>=0.30.2",
    "transformers>=4.51.3",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "torch>=2.6.0",
    "defusedxml>=0.7.1",
    "openpyxl>=3.1.5",
]

[project.scripts]
app = "txt2vec:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatch>=1.14.0",
    "hatchling>=1.27.0",
    "ruff>=0.11.2",
    "mkdocs>=1.6.1",
    "pytest>=8.3.5",
    "locust>=2.34.1",
    "markdown>=3.7",
    "safety>=3.2.9",
    "mkdocs-build-plantuml-plugin>=1.11.0",
    "pytest-html>=4.1.1",
    "pytest-github-actions-annotate-failures>=0.3.0",
    "pytest-asyncio>=0.26.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/txt2vec"]
[tool.hatch.build.targets.wheel]
packages = ["src/txt2vec"]

[tool.pytest.ini_options]
minversion = "8.3.5"
testpaths = ["tests"]
addopts = "--html report.html"
markers = ["dataset: marks test as a dataset test", "serial"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
preview = true

# Credits: Prof. Dr. Jürgen Zimmermann (HKA)
[tool.ruff.lint]
select = [
    "FAST",   # FastAPI
    "B",      # flake8-bugbear https://github.com/PyCQA/flake8-bugbear
    "ASYNC",  # flake8-async https://github.com/python-trio/flake8-async
    "S",      # flake8-bandit https://github.com/tylerwince/flake8-bandit Bandit>=1.7.1
    "A",      # flake8-builtins https://github.com/gforcada/flake8-builtins
    "COM",    # flake8-commas https://github.com/PyCQA/flake8-commas
    "C4",     # flake8-comprehensions https://github.com/adamchainz/flake8-comprehensions
    "ISC001", # flake8-implicit-str-concat https://github.com/flake8-implicit-str-concat/flake8-implicit-str-concat
    "PIE",    # flake8-pie https://github.com/sbdchd/flake8-pie
    "RET",    # flake8-return https://github.com/afonasev/flake8-return
    "SIM",    # flake8-simplify https://github.com/MartinThoma/flake8-simplify
    "I",      # isort https://github.com/PyCQA/isort
    "N",      # pep8-naming https://github.com/PyCQA/pep8-naming
    "PERF",   # Perflint https://github.com/tonybaloney/perflint
    "E",      # pycodestyle https://github.com/pycqa/pycodestyle
    "W",      # pycodestyle (warning)
    "D",      # pydoclint https://github.com/jsh9/pydoclint
    "F",      # Pyflakes https://github.com/PyCQA/pyflakes
    "PL",     # Pylint https://pypi.org/project/pylint
    "UP",     # pyupgrade https://github.com/asottile/pyupgrade
    "FURB",   # refurb https://github.com/dosisod/refurb
    "RUF",    # Ruff-specific rules https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "PTH",    # flake8-use-pathlib
    "SLF",    # flake8-self
    "TD",     # flake8-todos
    "ANN",    # flake8-annotations (enforce type hints)
]
pydocstyle.convention = "google"
ignore = [
    "D203",   # https://docs.astral.sh/ruff/rules/incorrect-blank-line-before-class
    "D213",   # https://docs.astral.sh/ruff/rules/multi-line-summary-second-line
    "RET503", # https://docs.astral.sh/ruff/rules/implicit-return
    "RUF012",
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma
]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.uv]
default-groups = "all"
